# 2D-FEM-WASM-Solver-R3F

./: .eslintignore  CMakeLists.txt  README.md  build.sh  package.json
source/: fem-solver.cpp
web/: README.md  package.json
web/public/: index.html
web/public/models/: front_upper_susp-arm.glb
web/src/: App.tsx  index.tsx  types.ts
web/src/components/: Configurations.tsx  Controller.tsx  Home.tsx  Intro.tsx  LessonsList.tsx  NodeInfo.tsx  Outliner.tsx  SuspensionArm.tsx
web/src/components/3DComponents/: AxesHelper.tsx  NodeComponent.tsx
web/src/store/: ActionSlice.ts  ActionTriggers.ts  Store.ts
web/src/styles/: Configurations.scss  Controller.css  Controller.scss  Intro.scss  NodeInfo.scss  Outliner.scss  index.scss
web/src/utils/: convertValue.ts
web/src/wasm/: fem-solver.js  fem-solver.wasm
